# colinux-32bit

./: .gitignore  CMakeLists.txt  README.md  settings.cmake
helpers/: Toolchain-guest.cmake  Toolchain-mingw.cmake  build-colinux-libs.cmake  build-cross.cmake  common.cmake  download.cmake  gcc-cross.cmake  winnt.cmake
src/: t.c
